--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -50,7 +50,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    #family: monospace
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -61,21 +61,21 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    #family: monospace
+    family: Fira Code
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Fira Code
 
   # Italic font face
-  #italic:
-  # Font family
-  #
-  # If the italic family is not specified, it will fall back to the
-  # value specified for the normal font.
-  #family: monospace
+  italic:
+    # Font family
+    #
+    # If the italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: Fira Code
 
-  # The `style` can be specified to pick a specific face.
-  #style: Italic
+    # The `style` can be specified to pick a specific face.
+    style: Italic
 
   # Bold italic font face
   #bold_italic:
