--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,46 @@
-# Font configuration
+font_size 13.0
+
 font_family JetBrains Mono Medium
 bold_font JetBrains Mono Bold
 bold_italic_font JetBrains Bold Italic
 italic_font JetBrains Italic
 
+hide_window_decorations yes
 sync_to_monitor no
 disable_ligatures never
 enable_audio_bell no
 background #282c34
 dynamic_background_opacity true
 symbol_map U+f101-U+f208 nonicon
+
+# black
+color0   #3B4252
+color8   #4C566A
+
+# red
+color1   #BF616A
+color9   #BF616A
+
+# green
+color2   #A3BE8C
+color10  #A3BE8C
+
+# yellow
+color3   #EBCB8B
+color11  #EBCB8B
+
+# blue
+color4  #81A1C1
+color12 #81A1C1
+
+# magenta
+color5   #B48EAD
+color13  #B48EAD
+
+# cyan
+color6   #88C0D0
+color14  #8FBCBB
+
+# white
+color7   #E5E9F0
+color15  #ECEFF4
