--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,12 @@
-font_size 13.0
+font_size 12.5
 
-font_family JetBrains Mono Medium
-bold_font JetBrains Mono Bold
+font_family JetBrainsMono Nerd Font Medium
+bold_font JetBrainsMono Nerd Font Bold
 bold_italic_font JetBrains Bold Italic
-italic_font JetBrains Italic
+italic_font JetBrainsMono Nerd Font Italic
+adjust_line_height 2
+adjust_column_width -1
+
 
 hide_window_decorations yes
 sync_to_monitor no
