--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_size 12.5
 
 font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
-bold_italic_font JetBrains Bold Italic
+bold_italic_font JetBrainsMono Nerd Font Italic
 italic_font JetBrainsMono Nerd Font Italic
 adjust_line_height 2
 adjust_column_width -1
