--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,20 +1,21 @@
-font_size 12.5
+font_size 15
 
-font_family JetBrainsMono Nerd Font Medium
-bold_font JetBrainsMono Nerd Font Bold
-bold_italic_font JetBrainsMono Nerd Font Italic
-italic_font JetBrainsMono Nerd Font Italic
+font_family Jetbrains Mono Regular
+bold_font Jetbrains Mono Bold
+bold_italic_font Jetbrains Bold Italic
+italic_font Jetbrains Mono Italic
 adjust_line_height 2
 adjust_column_width -1
 
-
-hide_window_decorations yes
+#background_opacity 0.95
+hide_window_decorations no
 sync_to_monitor no
 disable_ligatures never
 enable_audio_bell no
 background #282c34
-dynamic_background_opacity true
+#dynamic_background_opacity true
 symbol_map U+f101-U+f208 nonicon
+macos_thicken_font 0.4
 
 # black
 color0   #3B4252
